[gd_scene load_steps=23 format=3 uid="uid://bmasbspibgaiq"]

[ext_resource type="Script" uid="uid://d1rs0d0nc1drl" path="res://MainGame/GameFunctions/GameStartRoutine.gd" id="1_504wv"]
[ext_resource type="Script" uid="uid://duqdxx2ysanlk" path="res://MainGame/GamePhases/MainPlayerPhase2.gd" id="3_8kmty"]
[ext_resource type="Texture2D" uid="uid://dmvv6inxnb1j7" path="res://MainGame/Background/Sunset.png" id="6_mxx3j"]
[ext_resource type="Texture2D" uid="uid://dcwplvpctqmwo" path="res://MainGame/Entities/Submarine/submarino2.png" id="7_i5fl0"]
[ext_resource type="Script" uid="uid://djepfgl8c0sxp" path="res://MainGame/Entities/Shark/shark.gd" id="8_1pgtt"]
[ext_resource type="Texture2D" uid="uid://cqiddta3ax6m0" path="res://MainGame/Entities/Shark/SpriteShark.png" id="9_tg4hs"]
[ext_resource type="PackedScene" uid="uid://bs0crarlvc04f" path="res://MainGame/MainGameEssentials/hitbox.tscn.tscn" id="10_b7w6k"]
[ext_resource type="Script" uid="uid://cma73wb3nbjt4" path="res://MainGame/Entities/Shark/spawner.gd" id="11_qvera"]
[ext_resource type="Script" uid="uid://btrjg0hsjqo1v" path="res://MainGame/Entities/Shark/spawner_2.gd" id="12_w5wel"]
[ext_resource type="Script" uid="uid://q5woc8nrke" path="res://MainGame/Entities/Frigate/spawnerDestroyer.gd" id="13_b8orw"]
[ext_resource type="Script" uid="uid://drvejxm5ffsb6" path="res://MainGame/Entities/Diver/spawnerDiver.gd" id="14_s733d"]
[ext_resource type="Script" uid="uid://dkm0n5awc63yy" path="res://MainGame/Entities/Diver/spawnerDiver2.gd" id="15_mmr53"]
[ext_resource type="Script" uid="uid://c668126vb30xs" path="res://MainGame/MainGameEssentials/GameOxygen.gd" id="16_5bl1v"]
[ext_resource type="Script" uid="uid://dic7iy6emmokx" path="res://MainGame/MainGameEssentials/scoreUI.gd" id="16_mxx3j"]
[ext_resource type="FontFile" uid="uid://bvvyyb512cnuw" path="res://MainGame/MainGameEssentials/Pixeled English Font.ttf" id="17_2jo8m"]
[ext_resource type="Texture2D" uid="uid://cdoe3pqir00c3" path="res://MainGame/MainGameEssentials/Score_HUD.png" id="17_l7csu"]
[ext_resource type="FontFile" uid="uid://cc8ga0ounv6ss" path="res://MainGame/MainGameEssentials/alagard.ttf" id="18_l7csu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qpgq"]
size = Vector2(139, 41.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pv6b4"]
size = Vector2(41, 42.7813)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3hs3"]
size = Vector2(1293.25, 464.188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dnxm"]
size = Vector2(195, 662)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ws5ob"]
size = Vector2(85, 47)

[node name="MainGame" type="Node2D"]
script = ExtResource("1_504wv")
metadata/_edit_vertical_guides_ = [1282.0]

[node name="Background" type="Node2D" parent="."]

[node name="BG" type="Sprite2D" parent="Background"]
position = Vector2(637, 247)
scale = Vector2(0.871094, 0.792969)
texture = ExtResource("6_mxx3j")

[node name="GameStart" type="Node" parent="."]
script = ExtResource("1_504wv")

[node name="GameScore" type="Node" parent="."]
script = ExtResource("1_504wv")

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
top_level = true
light_mask = 512
visibility_layer = 512
position = Vector2(154, 292)
collision_mask = 52
script = ExtResource("3_8kmty")

[node name="shootPos" type="Node2D" parent="Player"]
position = Vector2(30, 42)

[node name="playerSprite" type="Sprite2D" parent="Player"]
scale = Vector2(0.157288, 0.158447)
texture = ExtResource("7_i5fl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
unique_name_in_owner = true
visible = false
position = Vector2(7.62939e-06, 13.109)
shape = SubResource("RectangleShape2D_8qpgq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player"]
unique_name_in_owner = true
visible = false
position = Vector2(10, -28.391)
shape = SubResource("RectangleShape2D_pv6b4")

[node name="Hurtbox" type="Area2D" parent="Player"]
collision_layer = 8
collision_mask = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Hurtbox"]
position = Vector2(-1.25, 14)
shape = SubResource("RectangleShape2D_8qpgq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/Hurtbox"]
position = Vector2(10, -29)
shape = SubResource("RectangleShape2D_pv6b4")

[node name="Border" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Border"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D" groups=["Enemies"]]
position = Vector2(643, -132)
shape = SubResource("RectangleShape2D_v3hs3")

[node name="StaticBody2D2" type="StaticBody2D" parent="Border"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D2"]
position = Vector2(639, 855)
shape = SubResource("RectangleShape2D_v3hs3")

[node name="StaticBody2D3" type="StaticBody2D" parent="Border"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D3"]
position = Vector2(-96, 328)
shape = SubResource("RectangleShape2D_8dnxm")

[node name="StaticBody2D4" type="StaticBody2D" parent="Border"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D4"]
position = Vector2(1376, 333)
shape = SubResource("RectangleShape2D_8dnxm")

[node name="Enemies" type="Node2D" parent="." groups=["Enemies"]]

[node name="Shark" type="Node2D" parent="Enemies"]

[node name="Shark" type="CharacterBody2D" parent="Enemies/Shark" groups=["Enemies"]]
top_level = true
position = Vector2(220, -192)
collision_layer = 2
collision_mask = 2
script = ExtResource("8_1pgtt")

[node name="Sprite2D" type="Sprite2D" parent="Enemies/Shark/Shark"]
position = Vector2(1265.38, 61.5)
scale = Vector2(0.0668946, 0.0537109)
texture = ExtResource("9_tg4hs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Shark/Shark"]
position = Vector2(1263.49, 61.5)
shape = SubResource("RectangleShape2D_ws5ob")

[node name="Hitbox" parent="Enemies/Shark/Shark" instance=ExtResource("10_b7w6k")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Shark/Shark/Hitbox"]
position = Vector2(1263.49, 61.5)
shape = SubResource("RectangleShape2D_ws5ob")

[node name="SpawnerShark" type="Node2D" parent="."]
visible = false
position = Vector2(1723, 441)
script = ExtResource("11_qvera")

[node name="SpawnPoints" type="Node2D" parent="SpawnerShark"]
position = Vector2(136, -9)

[node name="Spawn 1" type="Marker2D" parent="SpawnerShark/SpawnPoints"]
position = Vector2(355, 136)
rotation = -0.00275528

[node name="Spawn 2" type="Marker2D" parent="SpawnerShark/SpawnPoints"]
position = Vector2(104, -118)

[node name="Spawn 3" type="Marker2D" parent="SpawnerShark/SpawnPoints"]
position = Vector2(240, 3)

[node name="Spawn 4" type="Marker2D" parent="SpawnerShark/SpawnPoints"]
position = Vector2(-4, -195)

[node name="Spawn 5" type="Marker2D" parent="SpawnerShark/SpawnPoints"]
position = Vector2(666, 150)

[node name="Spawn 6" type="Marker2D" parent="SpawnerShark/SpawnPoints"]
position = Vector2(626, -103)

[node name="Spawn 7" type="Marker2D" parent="SpawnerShark/SpawnPoints"]
position = Vector2(279, -154)

[node name="Timer" type="Timer" parent="SpawnerShark"]
wait_time = 3.0
autostart = true
ignore_time_scale = true

[node name="SpawnerShark2" type="Node2D" parent="."]
visible = false
position = Vector2(-2164, 430)
script = ExtResource("12_w5wel")

[node name="SpawnPoints" type="Node2D" parent="SpawnerShark2"]
position = Vector2(10, -4)

[node name="Spawn 8" type="Marker2D" parent="SpawnerShark2/SpawnPoints"]
position = Vector2(447, 17)
rotation = -0.00275528

[node name="Spawn 9" type="Marker2D" parent="SpawnerShark2/SpawnPoints"]
position = Vector2(132, -168)

[node name="Spawn 10" type="Marker2D" parent="SpawnerShark2/SpawnPoints"]
position = Vector2(229, -90)

[node name="Spawn 11" type="Marker2D" parent="SpawnerShark2/SpawnPoints"]
position = Vector2(19, -46)

[node name="Spawn 12" type="Marker2D" parent="SpawnerShark2/SpawnPoints"]
position = Vector2(666, 117)

[node name="Spawn 13" type="Marker2D" parent="SpawnerShark2/SpawnPoints"]
position = Vector2(663, -149)

[node name="Spawn 14" type="Marker2D" parent="SpawnerShark2/SpawnPoints"]
position = Vector2(350, -130)

[node name="Timer" type="Timer" parent="SpawnerShark2"]
wait_time = 3.0
autostart = true
ignore_time_scale = true

[node name="SpawnerDestroyer" type="Node2D" parent="."]
visible = false
position = Vector2(1723, 441)
script = ExtResource("13_b8orw")

[node name="SpawnPoints" type="Node2D" parent="SpawnerDestroyer"]
position = Vector2(136, -9)

[node name="Spawn 1" type="Marker2D" parent="SpawnerDestroyer/SpawnPoints"]
position = Vector2(-374, -344)
rotation = -0.00275528

[node name="Timer" type="Timer" parent="SpawnerDestroyer"]
wait_time = 20.0
autostart = true
ignore_time_scale = true

[node name="SpawnerDivers" type="Node2D" parent="."]
visible = false
position = Vector2(878, 423)
script = ExtResource("14_s733d")

[node name="SpawnPoints2" type="Node2D" parent="SpawnerDivers"]
position = Vector2(10, -4)

[node name="Spawn 1" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(673, -4.99999)
rotation = -0.00275528

[node name="Spawn 2" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(666, 118)

[node name="Spawn 3" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(675, 48)

[node name="Spawn 4" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(678, 176)

[node name="Spawn 5" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(669, -81)

[node name="Spawn 6" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(663, -149)

[node name="Spawn 7" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(660, -209)

[node name="Timer" type="Timer" parent="SpawnerDivers"]
wait_time = 10.0
autostart = true
ignore_time_scale = true

[node name="SpawnerDivers2" type="Node2D" parent="."]
visible = false
position = Vector2(-816, 404)
script = ExtResource("15_mmr53")

[node name="SpawnPoints2" type="Node2D" parent="SpawnerDivers2"]
position = Vector2(10, -4)

[node name="Spawn 1" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(673, -4.99999)
rotation = -0.00275528

[node name="Spawn 2" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(666, 118)

[node name="Spawn 3" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(675, 48)

[node name="Spawn 4" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(678, 176)

[node name="Spawn 5" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(669, -81)

[node name="Spawn 6" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(663, -149)

[node name="Spawn 7" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(660, -209)

[node name="Timer" type="Timer" parent="SpawnerDivers2"]
wait_time = 10.0
autostart = true
ignore_time_scale = true

[node name="diverUI" type="RichTextLabel" parent="."]
offset_left = 1122.0
offset_top = 1.0
offset_right = 1327.0
offset_bottom = 104.0
theme_override_fonts/normal_font = ExtResource("18_l7csu")
bbcode_enabled = true
text = "[img=100]res://MainGame/Entities/Diver/Mergulhador.png[/img]  [color=black][font_size=32]X[/font_size][/color]
"

[node name="lifeUI" type="RichTextLabel" parent="."]
offset_right = 376.0
offset_bottom = 137.0
theme_override_fonts/normal_font = ExtResource("18_l7csu")
bbcode_enabled = true
text = "[img=130]res://MainGame/MainGameEssentials/Iron_heart.png[/img]  [color=black][font_size=32]X[/font_size][/color]
"

[node name="oxygenUI" type="RichTextLabel" parent="."]
offset_left = 151.0
offset_top = -3.0
offset_right = 765.0
offset_bottom = 179.0
theme_override_fonts/normal_font = ExtResource("18_l7csu")
bbcode_enabled = true
text = "[img=100]res://MainGame/MainGameEssentials/Oxygen_tank.png[/img][color=black][font_size=36]{contagem}[/font_size][/color] [color=black][font_size=36]/100[/font_size][/color]"

[node name="diversGoal" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 1198.0
offset_top = 78.0
offset_right = 1317.0
offset_bottom = 118.0
scale = Vector2(0.97606, 1.33715)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("18_l7csu")
bbcode_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("16_mxx3j")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
offset_left = 548.0
offset_top = -27.0
offset_right = 1572.0
offset_bottom = 997.0
scale = Vector2(0.169081, 0.140682)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("17_l7csu")

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 384.431
offset_top = 504.684
offset_right = 439.431
offset_bottom = 553.684
scale = Vector2(6.4143, 10.2733)
theme_override_fonts/font = ExtResource("17_2jo8m")
text = "00000
"

[node name="GameOxygen" type="Node" parent="."]
script = ExtResource("16_5bl1v")

[connection signal="area_entered" from="Player/Hurtbox" to="Player" method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Player/Hurtbox" to="Player" method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="SpawnerShark/Timer" to="SpawnerShark" method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnerShark2/Timer" to="SpawnerShark2" method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnerDestroyer/Timer" to="SpawnerDestroyer" method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnerDivers/Timer" to="SpawnerDivers" method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnerDivers2/Timer" to="SpawnerDivers2" method="_on_timer_timeout"]
